tests/fails/f42.t
local a = quote
    while true do end
end
terra foo()
  return  a
end
foo()